1.修改分词提示词，增加分布查询问题的维度提取能力 2.增加需要排除默认值的维度传递逻辑。 3.增加corrector默认值排除校正器，对于大模型生成的sql进行校验。未正确排除默认值的情况通过校正器填充筛选条件。 4.修改数据库配置，增加读写线程数。